--- a/tests/topotests/yama_bgp1/r1/zebra.conf
+++ b/tests/topotests/yama_bgp1/r1/zebra.conf
@@ -2,10 +2,10 @@
 interface lo
  ip address 172.16.255.254/32
 !
-interface r1-eth0
+interface eth0
  ip address 192.168.255.1/24
 !
-interface r1-eth1
+interface eth1
  ip address 10.0.0.1/24
 !
 ip forwarding
