--- a/tests/topotests/yama_bgp1/r2/zebra.conf
+++ b/tests/topotests/yama_bgp1/r2/zebra.conf
@@ -1,8 +1,8 @@
 !
-interface r2-eth0
+interface eth0
  ip address 192.168.255.2/24
 !
-interface r2-eth1
+interface eth1
  ip address 10.1.0.1/24
 !
 ip forwarding
