--- a/tests/topotests/yama_bgp1/r2/bgpd.conf
+++ b/tests/topotests/yama_bgp1/r2/bgpd.conf
@@ -1,5 +1,6 @@
 router bgp 65001
   no bgp ebgp-requires-policy
+  yama_filter
   network 10.1.0.0/24
   neighbor 192.168.255.1 remote-as 65000
   neighbor 192.168.255.1 timers 3 10
